--- a/package.json
+++ b/package.json
@@ -1,23 +1,18 @@
 {
-  "name": "sockettrivia",
+  "name": "backstorytrivia-server",
   "version": "0.1.0",
+  "private": true,
   "description": "Websocket enabled trivia games",
   "main": "./dist/www/server.js",
   "scripts": {
     "start": "set NODE_ENV=production & node ./dist/www/server.js",
-    "install": "npm install & npm install --prefix react & npm install --prefix trivia",
     "run-server": "set DEBUG=socket.io:* & nodemon --inspect --watch dist",
-    "run-react": "npm start --prefix react ",
-    "watch-scss": "sass --watch source/scss/main.scss:dist/public/assets/app.css",
     "watch-ts": "tsc --watch",
-    "watch": "concurrently -k -p \"[{name}]\" -n \"TS Server\" -c \"cyan\" \"npm:watch-ts\"",
     "build-ts": "tsc -b",
-    "build-ts-public": "cd source & tsc -b",
-    "build-webpack": "webpack -p",
-
     "e2e": "repo-tools test deploy",
     "test": "repo-tools test app",
-    "cover": "nyc --cache npm test; nyc report --reporter=html"
+    "cover": "nyc --cache npm test; nyc report --reporter=html",
+    "deploy": "gcloud app deploy -q"
   },
   "browserslist": [
     "last 4 version"
@@ -47,56 +42,30 @@
   "author": "Devin Mitchell",
   "license": "ISC",
   "dependencies": {
-    "@babel/polyfill": "^7.0.0",
-    "bootstrap": "^4.1.3",
     "cookie-parser": "^1.4.3",
     "debug": "^4.1.0",
     "dotenv": "^6.1.0",
-    "ejs": "^2.6.1",
     "express": "^4.16.4",
     "express-session": "latest",
-    "jquery": "^3.3.1",
     "lodash": "^4.17.11",
-    "mithril": "^1.1.6",
     "moment": "^2.22.2",
-    "mongodb": "^3.1.8",
+    "mongodb": "^3.1.9",
     "morgan": "^1.9.1",
-    "mysql": "^2.16.0",
-    "popper.js": "^1.14.4",
     "socket.io": "^2.1.1",
-    "typescript": "^3.1.3",
+    "typescript": "^3.1.6",
     "uuid": "^3.3.2"
   },
   "devDependencies": {
-    "@babel/cli": "^7.1.2",
-    "@babel/core": "^7.1.2",
+    "@babel/core": "^7.1.5",
     "@babel/plugin-syntax-dynamic-import": "^7.0.0",
-    "@babel/preset-env": "^7.1.0",
     "@types/bootstrap": "^4.1.2",
     "@types/express": "^4.16.0",
-    "@types/jquery": "^3.3.20",
-    "@types/lodash": "^4.14.117",
-    "@types/mithril": "^1.1.13",
-    "@types/mongodb": "^3.1.12",
+    "@types/lodash": "^4.14.118",
+    "@types/mongodb": "^3.1.14",
     "@types/morgan": "^1.7.35",
-    "@types/node": "^10.12.0",
+    "@types/node": "^10.12.5",
     "@types/popper.js": "^1.11.0",
-    "@types/socket.io": "^1.4.38",
-    "autoprefixer": "^9.2.0",
-    "babel-loader": "^8.0.4",
-    "concurrently": "^4.0.1",
-    "copy-webpack-plugin": "^4.5.3",
-    "css-loader": "^0.28.11",
-    "eslint": "^5.7.0",
-    "html-webpack-plugin": "^3.2.0",
-    "postcss": "^7.0.2",
-    "postcss-cli": "^6.0.0",
-    "sass": "^1.14.2",
-    "string-replace-loader": "^2.1.1",
-    "uglify-js": "^3.4.5",
-    "uglifycss": "0.0.29",
-    "webpack": "^4.14.0",
-    "webpack-cli": "^3.0.8"
+    "babel-loader": "^8.0.4"
   },
   "engines": {
     "node": ">=8"
