--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
   "author": "Devin Mitchell",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^3.0.2",
     "cookie-parser": "^1.4.3",
     "debug": "^4.1.0",
     "dotenv": "^6.1.0",
@@ -58,6 +59,7 @@
   "devDependencies": {
     "@babel/core": "^7.1.5",
     "@babel/plugin-syntax-dynamic-import": "^7.0.0",
+    "@types/bcrypt": "^3.0.0",
     "@types/bootstrap": "^4.1.2",
     "@types/express": "^4.16.0",
     "@types/lodash": "^4.14.118",
@@ -65,6 +67,7 @@
     "@types/morgan": "^1.7.35",
     "@types/node": "^10.12.5",
     "@types/popper.js": "^1.11.0",
+    "@types/uuid": "^3.4.4",
     "babel-loader": "^8.0.4"
   },
   "engines": {
