--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "./dist/www/server.js",
   "scripts": {
     "start": "set NODE_ENV=production & node ./dist/www/server.js",
-    "run-server": "set DEBUG=socket.io:* & nodemon --inspect --watch dist",
+    "run-server": "nodemon --inspect --watch dist",
     "watch-ts": "tsc --watch",
     "build-ts": "tsc -b",
     "e2e": "repo-tools test deploy",
@@ -42,7 +42,9 @@
   "author": "Devin Mitchell",
   "license": "ISC",
   "dependencies": {
+    "@types/debug": "0.0.31",
     "bcrypt": "^3.0.2",
+    "compression": "^1.7.3",
     "cookie-parser": "^1.4.3",
     "debug": "^4.1.0",
     "dotenv": "^6.1.0",
@@ -61,6 +63,7 @@
     "@babel/plugin-syntax-dynamic-import": "^7.0.0",
     "@types/bcrypt": "^3.0.0",
     "@types/bootstrap": "^4.1.2",
+    "@types/compression": "0.0.36",
     "@types/express": "^4.16.0",
     "@types/lodash": "^4.14.118",
     "@types/mongodb": "^3.1.14",
