--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "moment": "^2.22.2",
     "mongodb": "^3.1.9",
     "morgan": "^1.9.1",
+    "randexp": "^0.5.3",
     "socket.io": "^2.1.1",
     "typescript": "^3.1.6",
     "uuid": "^3.3.2"
