--- a/package.json
+++ b/package.json
@@ -43,13 +43,16 @@
   "license": "ISC",
   "dependencies": {
     "@types/debug": "0.0.31",
+    "axios": "^0.18.0",
     "bcrypt": "^3.0.2",
     "compression": "^1.7.3",
     "cookie-parser": "^1.4.3",
     "debug": "^4.1.0",
     "dotenv": "^6.1.0",
     "express": "^4.16.4",
+    "express-graphql": "^0.7.1",
     "express-session": "latest",
+    "graphql": "^14.0.2",
     "lodash": "^4.17.11",
     "moment": "^2.22.2",
     "mongodb": "^3.1.9",
@@ -57,22 +60,27 @@
     "randexp": "^0.5.3",
     "socket.io": "^2.1.1",
     "typescript": "^3.1.6",
-    "uuid": "^3.3.2"
+    "uuid": "^3.3.2",
+    "jsonwebtoken": "latest"
   },
   "devDependencies": {
     "@babel/core": "^7.1.5",
     "@babel/plugin-syntax-dynamic-import": "^7.0.0",
+    "@types/axios": "^0.14.0",
     "@types/bcrypt": "^3.0.0",
     "@types/bootstrap": "^4.1.2",
     "@types/compression": "0.0.36",
     "@types/express": "^4.16.0",
+    "@types/express-graphql": "^0.6.2",
     "@types/lodash": "^4.14.118",
     "@types/mongodb": "^3.1.14",
+    "@types/mongoose": "^5.3.4",
     "@types/morgan": "^1.7.35",
     "@types/node": "^10.12.5",
     "@types/popper.js": "^1.11.0",
     "@types/uuid": "^3.4.4",
-    "babel-loader": "^8.0.4"
+    "babel-loader": "^8.0.4",
+    "mongoose": "^5.3.15"
   },
   "engines": {
     "node": ">=10"
