--- a/react/package.json
+++ b/react/package.json
@@ -4,18 +4,21 @@
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.8",
-    "@fortawesome/pro-light-svg-icons": "^5.5.0",
-    "@fortawesome/pro-regular-svg-icons": "^5.5.0",
-    "@fortawesome/pro-solid-svg-icons": "^5.5.0",
+    "@fortawesome/pro-light-svg-icons": "^5.6.1",
+    "@fortawesome/pro-regular-svg-icons": "^5.6.1",
+    "@fortawesome/pro-solid-svg-icons": "^5.6.1",
     "@fortawesome/react-fontawesome": "^0.1.3",
     "bootstrap": "^4.1.3",
+    "hammerjs": "^2.0.8",
     "lodash": "^4.17.11",
     "moment": "^2.22.2",
     "react": "^16.6.1",
     "react-dom": "^16.6.1",
+    "react-offcanvas": "^0.3.1",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-scripts-ts": "3.1.0",
+    "react-swipe-events": "^1.0.3",
     "socket.io-client": "^2.1.1",
     "unstated": "^2.1.1"
   },
@@ -30,6 +33,7 @@
   },
   "devDependencies": {
     "@fortawesome/fontawesome-pro": "^5.5.0",
+    "@types/hammerjs": "^2.0.36",
     "@types/jest": "^23.3.9",
     "@types/lodash": "^4.14.118",
     "@types/node": "^10.12.5",
