--- a/.gcloudignore
+++ b/.gcloudignore
@@ -33,5 +33,7 @@ react/public
 **/*.ts
 **/*.tsx
 
+Functions
+
 
 #-----------------------------------------------------------------------------------
