--- a/.gcloudignore
+++ b/.gcloudignore
@@ -37,5 +37,7 @@ trivia/**/*
 **/*.ts
 **/*.tsx
 
+Functions
+
 
 #-----------------------------------------------------------------------------------
