--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,8 @@ app.yaml
 package-lock.json
 Game/**
 
+trivia/**/*
+
 routes2/**/*
 ejs2/**/*
 dist/**/*
@@ -97,3 +99,4 @@ typings/
 .serverless
 
 key.json.enc
+/trivia/
