--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "e2e": "repo-tools test deploy",
     "test": "repo-tools test app",
     "cover": "nyc --cache npm test; nyc report --reporter=html",
-    "deploy": "gcloud app deploy -q"
+    "deploy": "gcloud app deploy -q",
+    "deploy-no-promote": "gcloud app deploy --no-promote -q"
   },
   "browserslist": [
     "last 4 version"
