--- a/react-material/package.json
+++ b/react-material/package.json
@@ -33,7 +33,8 @@
     "react-scripts-ts": "3.1.0",
     "react-transition-group": "^2.5.2",
     "socket.io-client": "^2.1.1",
-    "unstated": "^2.1.1"
+    "unstated": "^2.1.1",
+    "react-select": "latest"
   },
   "devDependencies": {
     "@types/hammerjs": "^2.0.36",
@@ -44,6 +45,7 @@
     "@types/react-addons-transition-group": "^15.0.3",
     "@types/react-dom": "^16.0.9",
     "@types/react-router-dom": "^4.3.1",
+    "@types/react-select": "^2.0.11",
     "@types/socket.io-client": "^1.4.32",
     "source-map-explorer": "^1.6.0",
     "typescript": "^3.1.6"
