--- a/react-material/package.json
+++ b/react-material/package.json
@@ -9,10 +9,10 @@
   "scripts": {
     "start": "react-scripts-ts start",
     "build": "react-scripts-ts build",
+    "build:local": "node ./scripts/build",
     "test": "react-scripts-ts test --env=jsdom",
     "eject": "react-scripts-ts eject",
-    "scss": "sass --watch src:src",
-    "analyze": "source-map-explorer build/static/js/main.*"
+    "scss": "sass --watch src:src"
   },
   "dependencies": {
     "@fortawesome/fontawesome-pro": "^5.5.0",
@@ -30,10 +30,10 @@
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-scripts-ts": "3.1.0",
+    "react-select": "latest",
     "react-transition-group": "^2.5.2",
     "socket.io-client": "^2.1.1",
-    "unstated": "^2.1.1",
-    "react-select": "latest"
+    "unstated": "^2.1.1"
   },
   "devDependencies": {
     "@types/hammerjs": "^2.0.36",
@@ -47,6 +47,7 @@
     "@types/react-select": "^2.0.11",
     "@types/socket.io-client": "^1.4.32",
     "source-map-explorer": "^1.6.0",
-    "typescript": "^3.1.6"
+    "typescript": "^3.1.6",
+    "webpack-bundle-analyzer": "^3.0.3"
   }
 }
