--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
   "license": "ISC",
   "dependencies": {
     "@types/debug": "0.0.31",
+    "@types/webpack": "^4.4.24",
     "axios": "^0.18.0",
     "bcrypt": "^3.0.2",
     "compression": "^1.7.3",
@@ -54,6 +55,7 @@
     "express-graphql": "^0.7.1",
     "express-session": "latest",
     "graphql": "^14.0.2",
+    "jsonwebtoken": "latest",
     "lodash": "^4.17.11",
     "moment": "^2.22.2",
     "mongodb": "^3.1.9",
@@ -62,8 +64,7 @@
     "socket.io": "^2.1.1",
     "typescript": "^3.1.6",
     "uuid": "^3.3.2",
-    "jsonwebtoken": "latest",
-    "notrivia": "./notrivia"
+    "mongoose": "^5.4.2"
   },
   "devDependencies": {
     "@babel/core": "^7.1.5",
@@ -82,7 +83,8 @@
     "@types/popper.js": "^1.11.0",
     "@types/uuid": "^3.4.4",
     "babel-loader": "^8.0.4",
-    "mongoose": "^5.4.2"
+    "webpack": "^4.29.0",
+    "webpack-cli": "^3.2.1"
   },
   "engines": {
     "node": ">=10"
