--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "Websocket enabled trivia games",
   "main": "./dist/www/server.js",
   "scripts": {
-    "start": "set NODE_ENV=production & node ./dist/www/server.js",
+    "start": "set NODE_ENV=production & node --inspect ./dist/www/server.js",
     "run-server": "nodemon --inspect --watch dist",
     "watch-ts": "tsc --watch",
     "build-ts": "tsc -b",
@@ -81,8 +81,6 @@
     "@types/morgan": "^1.7.35",
     "@types/node": "^10.12.5",
     "@types/popper.js": "^1.11.0",
-    "@types/uuid": "^3.4.4",
-    "babel-loader": "^8.0.4",
     "webpack": "^4.29.0",
     "webpack-cli": "^3.2.1"
   },
