--- a/react-play/package.json
+++ b/react-play/package.json
@@ -10,6 +10,7 @@
     "@fortawesome/pro-regular-svg-icons": "^5.6.1",
     "@fortawesome/pro-solid-svg-icons": "^5.6.1",
     "@fortawesome/react-fontawesome": "^0.1.3",
+    "@zxing/library": "^0.12.3",
     "bootstrap": "^4.1.3",
     "node-sass": "^4.11.0",
     "normalize.css": "^8.0.1",
@@ -20,7 +21,8 @@
     "react-snap": "^1.23.0",
     "react-spring": "^8.0.15",
     "sass-loader": "^7.1.0",
-    "unstated": "^2.1.1"
+    "unstated": "^2.1.1",
+    "socket.io": "^2.1.1"
   },
   "scripts": {
     "start": "react-scripts-ts start",
@@ -39,6 +41,7 @@
     "@types/react": "^16.8.7",
     "@types/react-dom": "^16.8.2",
     "@types/react-router-dom": "^4.3.1",
+    "@types/socket.io-client": "^1.4.32",
     "typescript": "^3.3.3333",
     "webpack-bundle-analyzer": "^3.0.3"
   }
