--- a/react-play/package.json
+++ b/react-play/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-play",
-  "version": "0.1.5",
+  "version": "0.1.6",
   "private": true,
   "proxy": "http://localhost:8080/",
   "dependencies": {
@@ -23,6 +23,7 @@
     "react-spring": "^8.0.15",
     "socket.io": "^2.1.1",
     "universal-analytics": "^0.4.20",
+    "color": "^3.1.0",
     "unstated": "^2.1.1"
   },
   "scripts": {
@@ -33,10 +34,13 @@
     "watch:scss": "sass --watch src:src",
     "test": "react-scripts-ts test --env=jsdom",
     "eject": "react-scripts-ts eject",
-    "postbuild": "react-snap"
+    "postbuild": "react-snap",
+    "tm2p": "ts-node ./src/util/index.ts",
+    "tmp": "nodemon --watch ./src/**/*.ts --ignore ./src/**/*.spec.ts --exec ts-node ./src/util/index.ts"
   },
   "devDependencies": {
     "@types/bootstrap": "^4.1.3",
+    "@types/color": "^3.0.0",
     "@types/jest": "^24.0.9",
     "@types/node": "^11.10.5",
     "@types/react": "^16.8.7",
@@ -46,6 +50,7 @@
     "@types/universal-analytics": "^0.4.2",
     "@types/react-ga": "^2.3.0",
     "sass-loader": "^7.1.0",
+    "ts-node": "^8.0.3",
     "typescript": "^3.3.3333",
     "webpack-bundle-analyzer": "^3.0.3"
   }
