--- a/react-material/.gitignore
+++ b/react-material/.gitignore
@@ -1,13 +1,34 @@
-# Created by .ignore support plugin (hsz.mobi)
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
+
+# testing
+/coverage
+
+# production
+/build
+.npmrc
+
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+*.back.ts
+*.back.tsx
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 ### Node template
 # Logs
 logs
 *.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-.npmrc
-build/*
 
 .idea
 
@@ -77,6 +98,11 @@ typings/
 
 # Serverless directories
 .serverless
+### Sass template
+.sass-cache/
+*.css.map
+*.sass.map
+*.scss.map
 ### JetBrains template
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and WebStorm
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
@@ -138,38 +164,6 @@ fabric.properties
 
 # Editor-based Rest Client
 .idea/httpRequests
-### Windows template
-# Windows thumbnail cache files
-Thumbs.db
-ehthumbs.db
-ehthumbs_vista.db
-
-# Dump file
-*.stackdump
-
-# Folder config file
-[Dd]esktop.ini
-
-# Recycle Bin used on file shares
-$RECYCLE.BIN/
-
-# Windows Installer files
-*.cab
-*.msi
-*.msix
-*.msm
-*.msp
-
-# Windows shortcuts
-*.lnk
-### Sass template
-.sass-cache/
-*.css.map
-*.sass.map
-*.scss.map
-### NotepadPP template
-# Notepad++ backups #
-*.bak
 ### VisualStudioCode template
 .vscode/*
 !.vscode/settings.json
