--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "backstorytrivia-server",
-  "version": "0.2.0",
+  "version": "0.2.1",
   "private": true,
   "description": "Websocket enabled trivia games",
   "main": "./dist/www/server.js",
   "scripts": {
     "start": "set NODE_ENV=production & node --inspect ./dist/www/server.js",
+    "dev": "concurrently -n TS,Server -c cyan,green \"npm:watch-ts\" \"npm:run-server\" ",
     "run-server": "nodemon --inspect --watch dist",
     "watch-ts": "tsc --watch",
     "build-ts": "tsc -b",
@@ -65,6 +66,7 @@
     "randexp": "^0.5.3",
     "socket.io": "^2.1.1",
     "typescript": "^3.1.6",
+    "seedrandom": "^3.0.1",
     "uuid": "^3.3.2"
   },
   "devDependencies": {
@@ -82,6 +84,8 @@
     "@types/morgan": "^1.7.35",
     "@types/node": "^10.12.5",
     "@types/popper.js": "^1.11.0",
+    "@types/seedrandom": "^2.4.28",
+    "concurrently": "^4.1.0",
     "webpack": "^4.29.0",
     "webpack-cli": "^3.2.1"
   },
