--- a/react-material/tsconfig.json
+++ b/react-material/tsconfig.json
@@ -4,7 +4,11 @@
     "outDir": "build/dist",
     "module": "esnext",
     "target": "es5",
-    "lib": ["es2015", "dom"],
+    "lib": [
+      "es6",
+      "dom",
+      "webworker"
+    ],
     "sourceMap": true,
     "allowJs": true,
     "jsx": "react",
@@ -13,12 +17,13 @@
     "forceConsistentCasingInFileNames": true,
     "noImplicitReturns": true,
     "noImplicitThis": true,
-    "noImplicitAny": false,
+    "noImplicitAny": true,
     "importHelpers": true,
     "strictNullChecks": true,
     "suppressImplicitAnyIndexErrors": true,
-    "noUnusedLocals": true,
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "allowSyntheticDefaultImports": true,
+    "noUnusedLocals": true
   },
   "exclude": [
     "node_modules",
