--- a/react-play/package.json
+++ b/react-play/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-play",
-  "version": "0.2.0",
+  "version": "0.2.1",
   "private": true,
   "proxy": "http://localhost:8080/",
   "dependencies": {
@@ -10,8 +10,10 @@
     "@fortawesome/pro-regular-svg-icons": "^5.6.1",
     "@fortawesome/pro-solid-svg-icons": "^5.6.1",
     "@fortawesome/react-fontawesome": "^0.1.3",
+    "@types/workbox-sw": "^3.2.1",
     "@zxing/library": "^0.12.3",
     "bootstrap": "^4.1.3",
+    "color": "^3.1.0",
     "node-sass": "^4.11.0",
     "normalize.css": "^8.0.1",
     "react": "^16.8.4",
@@ -23,8 +25,8 @@
     "react-spring": "^8.0.15",
     "socket.io": "^2.1.1",
     "universal-analytics": "^0.4.20",
-    "color": "^3.1.0",
-    "unstated": "^2.1.1"
+    "unstated": "^2.1.1",
+    "workbox-sw": "^4.1.1"
   },
   "scripts": {
     "start": "react-scripts-ts start",
@@ -45,10 +47,11 @@
     "@types/node": "^11.10.5",
     "@types/react": "^16.8.7",
     "@types/react-dom": "^16.8.2",
+    "@types/react-ga": "^2.3.0",
     "@types/react-router-dom": "^4.3.1",
     "@types/socket.io-client": "^1.4.32",
     "@types/universal-analytics": "^0.4.2",
-    "@types/react-ga": "^2.3.0",
+    "concurrently": "^4.1.0",
     "sass-loader": "^7.1.0",
     "ts-node": "^8.0.3",
     "typescript": "^3.3.3333",
