Too lazy to make individuals.
Started a way to make color themes. Just need a data-theme tag.
    currently only has "dark"

Added Open Ended and changed general appearance of Live

Move all SCSS to Style directory to make it easier to work with themeing

Also added Service Worker to so we should actually be caching resources

--- a/react-play/tsconfig.json
+++ b/react-play/tsconfig.json
@@ -4,7 +4,11 @@
     "outDir": "build/dist",
     "module": "esnext",
     "target": "es5",
-    "lib": ["es6", "dom"],
+    "lib": [
+      "es6",
+      "dom",
+      "webworker"
+    ],
     "sourceMap": true,
     "allowJs": true,
     "jsx": "react",
@@ -17,6 +21,8 @@
     "importHelpers": true,
     "strictNullChecks": true,
     "suppressImplicitAnyIndexErrors": true,
+    "skipLibCheck": true,
+    "allowSyntheticDefaultImports": true,
     "noUnusedLocals": true
   },
   "exclude": [
