--- a/react-material/package.json
+++ b/react-material/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-material",
-  "version": "0.0.5",
+  "version": "0.2.2",
   "description": "",
   "main": "index.js",
   "author": "",
@@ -21,18 +21,18 @@
     "@fortawesome/pro-regular-svg-icons": "^5.6.1",
     "@fortawesome/pro-solid-svg-icons": "^5.6.1",
     "@fortawesome/react-fontawesome": "^0.1.3",
-    "@material-ui/core": "^3.7.1",
+    "@material-ui/core": "^3.9.3",
     "@material-ui/icons": "latest",
     "classnames": "latest",
     "lodash": "^4.17.11",
-    "react": "^16.7.0",
-    "react-dom": "^16.6.1",
-    "react-router": "^4.3.1",
-    "react-router-dom": "^4.3.1",
-    "react-scripts-ts": "3.1.0",
-    "react-select": "latest",
-    "react-transition-group": "^2.5.2",
-    "socket.io-client": "^2.1.1",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "react-router": "^5.0.0",
+    "react-router-dom": "^5.0.0",
+    "react-scripts-ts": "^3.1.0",
+    "react-select": "^2.4.2",
+    "react-transition-group": "^2.9.0",
+    "socket.io-client": "^2.2.0",
     "unstated": "^2.1.1"
   },
   "devDependencies": {
@@ -40,11 +40,11 @@
     "@types/jest": "^23.3.9",
     "@types/lodash": "^4.14.118",
     "@types/node": "^10.12.5",
-    "@types/react": "^16.7.3",
-    "@types/react-addons-transition-group": "^15.0.3",
-    "@types/react-dom": "^16.0.9",
+    "@types/react": "^16.8.12",
+    "@types/react-addons-transition-group": "^15.0.4",
+    "@types/react-dom": "^16.8.3",
     "@types/react-router-dom": "^4.3.1",
-    "@types/react-select": "^2.0.11",
+    "@types/react-select": "^2.0.15",
     "@types/socket.io-client": "^1.4.32",
     "source-map-explorer": "^1.6.0",
     "typescript": "^3.1.6",
