Many changes to lamda functions New Route     ExportQuestionsCSV     Used to export questions currently created by the user into csv format ImportQuestions now actually imports questions, not just show
Authorzation class created to handle JWT Tokens

Test environment now emulates Google Functions ( the production environment ) better

--- a/Functions/tsconfig.json
+++ b/Functions/tsconfig.json
@@ -1,11 +1,13 @@
 {
-
   "compilerOptions": {
-    "target": "esnext",
+    "target": "es6",
     "module": "commonjs",
+    "rootDir": "./",
+    "outDir": "./lib",
     "allowJs": false,
     "sourceMap": true,
     "declaration": true,
-    "moduleResolution": "node"
-  },
+    "moduleResolution": "node",
+    "skipLibCheck": true
+  }
 }
