--- a/Functions/package.json
+++ b/Functions/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "description": "Websocket enabled trivia games",
-  "main": "./Run.js",
+  "main": "./lib/Run.js",
   "scripts": {
     "run-functions": "nodemon --inspect --watch",
     "watch-ts": "tsc --watch"
@@ -16,7 +16,8 @@
     "lodash": "^4.17.11",
     "mongodb": "^3.1.9",
     "express-fileupload": "^1.1.3-alpha.1",
-    "csv-parser": "^2.2.0"
+    "csv-parser": "^2.2.0",
+    "body-parser": "^1.18.3"
   },
   "devDependencies": {
     "@babel/core": "^7.1.5",
@@ -26,6 +27,7 @@
     "@types/express": "^4.16.0",
     "@types/mongodb": "^3.1.14",
     "@types/node": "^10.12.5",
+    "@types/body-parser": "^1.17.0",
     "babel-loader": "^8.0.4",
     "express": "^4.16.4",
     "typescript": "^3.1.6"
