--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -5,11 +5,10 @@
     "module": "commonjs",
     "allowJs": false,
     "sourceMap": true,
-    "declaration": true,
     "outDir": "lib",
     "moduleResolution": "node"
   },
   "include": [
-    "bin", "routes", "app.ts", "config.ts", "www", "middleware", "api", "util"
+    "src"
   ]
 }
