--- a/Functions/package.json
+++ b/Functions/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "description": "Websocket enabled trivia games",
-  "main": "./lib/Run.js",
+  "main": "./lib/index.js",
   "scripts": {
     "run-functions": "nodemon --inspect --watch",
     "watch-ts": "tsc --watch"
@@ -11,11 +11,11 @@
   "author": "Devin Mitchell",
   "license": "ISC",
   "dependencies": {
+    "express": "^4.16.4",
     "dotenv": "^6.2.0",
     "jsonwebtoken": "latest",
     "lodash": "^4.17.11",
     "mongodb": "^3.1.9",
-    "express-fileupload": "^1.1.3-alpha.1",
     "csv-parser": "^2.2.0",
     "body-parser": "^1.18.3"
   },
@@ -24,7 +24,7 @@
     "@babel/plugin-syntax-dynamic-import": "^7.0.0",
     "@types/dotenv": "^6.1.0",
     "@types/express-fileupload": "^0.4.0",
-    "@types/express": "^4.16.0",
+    "@types/express": "^4.16.1",
     "@types/mongodb": "^3.1.14",
     "@types/node": "^10.12.5",
     "@types/body-parser": "^1.17.0",
