Created a test handler for ImportQuestionsCSV that does not actually add the questions to the databases, but does everything else.
added PORT to environment

set up framework to handle Question Lists ( a way to organize questions ) that will be used to automatically add all imported questions to a specified list.

--- a/Functions/package.json
+++ b/Functions/package.json
@@ -5,19 +5,19 @@
   "description": "Websocket enabled trivia games",
   "main": "./lib/index.js",
   "scripts": {
-    "run-functions": "nodemon --inspect --watch",
+    "run-functions": "nodemon --watch",
     "watch-ts": "tsc --watch"
   },
   "author": "Devin Mitchell",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.16.4",
+    "body-parser": "^1.18.3",
+    "csv-parser": "^2.2.0",
     "dotenv": "^6.2.0",
+    "express": "^4.16.4",
     "jsonwebtoken": "latest",
     "lodash": "^4.17.11",
-    "mongodb": "^3.1.9",
-    "csv-parser": "^2.2.0",
-    "body-parser": "^1.18.3"
+    "mongodb": "^3.1.9"
   },
   "devDependencies": {
     "@babel/core": "^7.1.5",
